--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,19 +1,9 @@
-<!DOCTYPE html>
-<html>
 
-<header>
-  
-</header>
 
-<body>
-<h1>星ログ</h1>
 <% @posts.each do |post|%>
-<%= post.content%>
-
+<p><%= post.content%>
 <%end%>
-</body>
 
-</html>
 
 
 
