--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,7 +1,116 @@
-body {
-  text-align: center;
+
+html{
+  font-size: 62.5%;
+  height: 100%;
 }
 
-// Place all the styles related to the posts controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: https://sass-lang.com/
+body{
+  height:100%;
+  
+}
+
+.container{
+  width:980px;
+  margin: 0 auto;
+  position:relative;
+  min-height: 100%;
+}
+
+.header{
+  
+  background-color: #4c4c53;
+  height: 50px;
+  font-size: 1.5rem;
+}
+
+.logo_image{
+  float:left;
+  width: 110px;
+  margin: 0;
+}
+
+li{
+  list-style:none;
+  width: auto;
+}
+
+.clearfix:after{
+  content: "";
+  display: block;
+  clear: both;
+}
+
+ul{
+  margin: 0;
+  padding: 0;
+}
+ul.top_menu{
+  float: right;
+}
+.top_menu li {
+  float: left;
+  list-style:none;
+}
+.top_menu li a {
+  color: #fff;
+  text-decoration: none;
+  display: block;
+  padding: 15px;
+}
+.top_menu li a:hover {
+  text-decoration: underline;
+}
+
+
+.image_container {
+  position: relative;
+}
+
+.centered_text {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  color: #FFF;
+  transform: translate(-50%,-50%);
+  font-size: 400%;
+  font-weight: bold;
+}
+
+.image_area{
+  width: 100%;
+}
+
+
+
+
+
+
+.content{
+  
+  width:660px;
+  float:left;
+  margin-left: 20px;
+  font-size: 1.5rem;
+  
+}
+
+
+.footer{
+  background-color: #4D4D4D;
+  height: 100px;
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  display:table;
+  
+}
+
+.footer p {
+  font-size: 1rem;
+  color: #fff;
+  text-align: center;
+  vertical-align: middle;
+  display: table-cell;
+}
+
+
