index.html.erbのコメント一覧表示部分の修正

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -6,6 +6,7 @@ html{
 
 body{
   height:100%;
+  background-color: #000000;
   
 }
 
@@ -82,16 +83,17 @@ ul.top_menu{
 
 
 
-
-
-
 .content{
-  
-  width:660px;
-  float:left;
-  margin-left: 20px;
-  font-size: 1.5rem;
-  
+  background-color:#4D4D4D;
+  margin-bottom: 20px;
+  font-size:2rem;
+  color:#fff;
+  text-decoration: none;
+  display: block;
+  padding: 5rem;
+}
+.timestamps{
+  color:#FFF;
 }
 
 
