--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,7 +1,11 @@
+<div class = new_area>
+ <h1>新規投稿する</h1>
 
   <%= form_with(model: @post,local: true) do |form| %>
-  <%= form.label :"コメント"%>
-  <%= form.text_field :content%>
-  <%= form.submit%>
+  <p><%= form.label :"コメント"%></p>
+  <p><%= form.text_field :content%></p>
+  <p><%= form.submit%></p>
   <% end %>
+  
+</div>
  
