--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -6,7 +6,8 @@
     <% @posts.each do |post|%>
 
     <li class = timestamps><%= post.created_at%></li>
-    <li class = content><%= post.content%></li>
+    <li class = content><%= post.content%>
+    <%= link_to "詳細を確認する",post_path(post.id)%></li>
     <%end%>
   </ul>
 </div>
