--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -7,7 +7,10 @@
 
     <li class = timestamps><%= post.created_at%></li>
     <li class = content><%= post.content%>
-    <%= link_to "詳細を確認する",post_path(post.id)%></li>
+    <%= link_to "詳細を確認する",post_path(post.id)%>
+    <%= link_to "編集する",edit_post_path(post.id)%>
+    
+    </li>
     <%end%>
   </ul>
 </div>
