--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,11 +1,4 @@
-<div class = new_area>
- <h1>新規投稿する</h1>
+<h1>新規投稿する</h1>
 
-  <%= form_with(model: @post,local: true) do |form| %>
-  <p><%= form.label :"コメント"%></p>
-  <p><%= form.text_field :content%></p>
-  <p><%= form.submit%></p>
-  <% end %>
-  
-</div>
+<%= render 'form'%>
  
