--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,4 +1,4 @@
-<div class = new_area>
+<div class = area>
   <%= form_with(model: @post,local: true) do |form| %>
   <p><%= form.label :"コメント"%></p>
   <p><%= form.text_field :content%></p>
