--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,5 +1,5 @@
 <div class = area>
-  <%= form_with(model: @post,local: true) do |form| %>
+  <%= form_with(model: @post,local: true, url: choose_new_or_edit) do |form| %>
   <p><%= form.label :"コメント"%></p>
   <p><%= form.text_field :content%></p>
   <p><%= form.submit%></p>
