詳細ページに編集ページへのリンクを追加

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -112,7 +112,14 @@ h1{
 }
 
 .show_area{
-  color:#FFF
+  background-color:#4D4D4D;
+  margin-bottom: 30px;
+  font-size:3rem;
+  color:#fff;
+  text-decoration: none;
+  display: block;
+  padding: 20rem;
+  
 }
 
 .footer{
