formページのcssを修正

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -111,6 +111,24 @@ h1{
   padding: 5rem;
 }
 
+.form_area{
+  background-color:#4D4D4D;
+  margin-bottom: 20px;
+  font-size:2rem;
+  color:#fff;
+  text-decoration: none;
+  display: block;
+  padding: 10rem;
+  text-align: center;
+}
+
+#textarea{
+  width: 600px;
+  height: 200px;
+
+}
+
+
 .show_area{
   background-color:#4D4D4D;
   margin-bottom: 30px;
