--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,11 +1,11 @@
-<div class = area>
+<div class = form_area>
   <%= form_with(model: @post,local: true, url: choose_new_or_edit) do |form| %>
     <% if @post.errors.any?%>
       <h2>error: 0〜140字で入力してください。</h2>
     <% end %>
     
     <p><%= form.label :"コメント"%></p>
-    <p><%= form.text_field :content%></p>
+    <%= form.text_field :content,id:'textarea'%>
     <p><%= form.submit%></p>
   <% end %>
 
