一覧画面のCSSを修正

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -44,6 +44,13 @@ ul{
   padding: 0;
 }
 
+.link{
+  text-decoration: none;
+  color:#FFF;
+  float: right;
+  margin: 10px;
+}
+
 ul.top_menu{
   float: right;
 }
