--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,12 +3,19 @@
 
   <ul>
     <% @posts.each do |post|%>
-      <li class = timestamps><%= post.created_at%></li>
-      <li class = content><%= post.content%>
-      <%= link_to "詳細",post_path(post.id)%>
-      <%= link_to "編集",edit_post_path(post.id)%>
-      <%= link_to "削除",post_path(post.id),method: :delete%>
+
+      <li class = timestamps>
+      <%= post.created_at%>
       </li>
+
+      <li class = content>
+      <%= post.content%>
+      <%= link_to "削除",post_path(post.id),method: :delete,class:'link'%>
+      <%= link_to "詳細",post_path(post.id),class: 'link'%>
+      <%= link_to "編集",edit_post_path(post.id),class:'link'%>
+      
+      </li>
+
     <%end%>
   </ul>
 </div>
